suricata (1:4.1.4-3) unstable; urgency=medium

  * Fix cross building by including patch that addresses abuse of
    AC_CHECK_FILE. Thanks to Helmut Grohne for the patch.
    Closes: #923174
  * Enable building with eBPF support.
    Thanks to Hilko Bengen for the patch.
    Closes: #917816

 -- Sascha Steinbiss <satta@debian.org>  Tue, 09 Jul 2019 16:47:49 +0200

suricata (1:4.1.4-2) unstable; urgency=medium

  * Do not install suricata-update, recommend external pkg instead.
    Closes: #924096

 -- Sascha Steinbiss <satta@debian.org>  Thu, 02 May 2019 17:15:48 +0200

suricata (1:4.1.4-1) unstable; urgency=medium

  * New upstream version 4.1.4
    - Bugs and security fixes
  * Refreshed quilt patches

 -- Pierre Chifflier <pollux@debian.org>  Wed, 01 May 2019 11:44:13 +0200

suricata (1:4.1.3-1) unstable; urgency=medium

  * New upstream version 4.1.3
  * Refreshed quilt patches

 -- Pierre Chifflier <pollux@debian.org>  Fri, 08 Mar 2019 10:24:43 +0100

suricata (1:4.1.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Sascha Steinbiss <satta@debian.org>  Wed, 09 Jan 2019 12:53:47 +0100

suricata (1:4.1.2-1) experimental; urgency=medium

  * New upstream release.
  * Add myself to uploaders.
  * Do not remove Rust vendor directory on distclean (Closes: #915154)

 -- Sascha Steinbiss <satta@debian.org>  Sun, 23 Dec 2018 10:48:27 +0000

suricata (1:4.1.0-2) experimental; urgency=medium

  * Disable Rust on armel for now (FTBFS)
  * Add liblz4-dev to build-deps to enable pcap compression
  * Update build-dependency on python:any to fix FTCBFS (Closes: #909606)

 -- Pierre Chifflier <pollux@debian.org>  Mon, 26 Nov 2018 11:07:08 +0100

suricata (1:4.1.0-1) experimental; urgency=medium

  [ Arturo Borrero Gonzalez ]
  * libhtp: bump soname to libhtp-0.5.24-1

  [ Pierre Chifflier ]
  * New upstream version 1:4.1.0
  * Refreshed quilt patches
  * Update python code directory
  * Enable rust support (i386 and amd64 only for now)